Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

0.2.3  2013-12-31  A fifth of a Jubilee.

* Allow the build system to include an user specified LDFLAGS.

* More preparations for Qt5 configure build.

* Standard scalable format (SVG) and MIME type icons support for
  session files (*.lscp) is now being added.

* Preparations for Qt5 migration.

* Added include <unistd.h> to shut up gcc 4.7 build failures.

* Make(ing) -jN parallel builds now available for the masses.

* Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir, --localedir.

* Made lookup of translation files work inside a Mac OS X bundle.

* Minor Mac OS X compilation error fix.

* Debugging stacktrace now applies to all working threads.

* Made lookup of translation files more robust on Windows.

* Fixes for cross compiling and building for Windows with configure
  and make.

* libX11 is now being added explicitly to the build link phase,
  as seen necessary on some bleeding-edge distros eg. Fedora 13,
  Debian 6.

* Moving from old deprecated Qt3'ish custom event post handling
  into regular asynchronous signal/slot strategy.

* Sampler channel and instrument file requester support for
  other than GIG engine instrument files (*gig; *.dls) has
  been added, making roads for the newer SFZ and SF2 engines
  instrument files (*.sfz; *.sf2).

* General standard dialog buttons layout is now in place.

* Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

* General source tree layout and build configuration change.

* Automatic crash-dump reports, debugger stack-traces (gdb), back-
  traces, whatever, are being introduced as a brand new configure
  option (--enable-stacktrace) and default enabled on debug build
  targets (--enable-debug).

* Attempt to fix broken instrument list model/view on Qt >= 4.6.
